--- a/esercizio2/style.css
+++ b/esercizio2/style.css
@@ -15,6 +15,12 @@ header img{
   width: 150px;
 }
 
+button{
+  margin-bottom: 50px;
+  margin-right: 15px;
+  padding: 10px;
+}
+
 #container img{
   height: 250px;
   width: 200px;
@@ -23,6 +29,7 @@ header img{
 #container{
   background-color: darkgrey;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   padding: 20vh 15vw;
